# heos-dial

./: .gitignore  .hgignore  Cargo.toml  README.adoc  build.rs  cfg.toml.example
.cargo/: config.toml
.github/workflows/: rust.yml
heos-dial/: Cargo.toml  build.rs
heos-dial/src/: encoder.rs  main.rs  wifi.rs
heos-lib/: Cargo.toml  README.md  Taskfile.yml  packetsender.ini  slumber.yml
heos-lib/src/: constants.rs  device.rs  heos.rs  heos_attributes.rs  heos_attributes_test.rs  heos_command.rs  heos_command_test.rs  heos_commands.rs  heos_commands_test.rs  heos_device.rs  heos_device_test.rs  heos_group.rs  heos_group_test.rs  heos_media.rs  heos_reply.rs  heos_reply_test.rs  heos_test.rs  lib.rs  macros.rs
heos-lib/test_assets/: aios_device.xml  discovery_response.txt  error.json  get_group_info.json  get_group_mute.json  get_group_volume.json  get_groups.json  get_mute.json  get_now_playing_media.json  get_play_state.json  get_player_info.json  get_players.json  get_volume.json  message.json  play_next.json  play_previous.json  set_group_mute.json  set_group_volume.json  set_mute.json  set_play_state.json  set_volume.json  toggle_group_mute.json  toggle_mute.json
heos-tui/: Cargo.toml  Taskfile.yml  mise.toml
heos-tui/src/: app.rs  events.rs  handlers.rs  heos.rs  main.rs  tui.rs  ui.rs
src/: encoder.rs  heos.rs  heos_test.rs  main.rs  wifi.rs
