[package]
name = "heos-dial"
version = "0.1.0"
authors = ["Christoph Kappel <christoph@unexist.dev>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "heos-dial"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
log = { version = "0.4.22", default-features = false }
esp-idf-svc = { version = "0.49.1", default-features = false }
anyhow = "1.0.89"
http = "1.1.0"
embedded-svc = "=0.28.0"
shtcx = "=1.0.0"
toml-cfg = "=0.2.0"
wifi = "0.1.0"

[build-dependencies]
embuild = "0.32.0"
toml-cfg = "=0.2.0"
