[package]
name = "heos-lib"
version = "0.1.0"
authors = [
    "Christoph Kappel <christoph@unexist.dev>"
]
license-file = "LICENSE"
homepage = "https://unexist.dev"
repository = "https://hg.unexist.dev/heos-dial"
edition = "2021"
exclude = ["/test_assets", "/slumber.yml", "/Taskfile.yml"]

[dependencies]
anyhow = "1.0.95"
const_format = "0.2.34"
async-stream = "0.3.6"
tokio = { version = "1.43.0", features = ["net", "macros", "rt", "rt-multi-thread", "io-util"] }
futures-util = "0.3.31"
gjson = "0.8.1"

[dev-dependencies]
pretty_assertions = "1.4.1"
rstest = "0.24.0"
