[package]
name = "heos-lib"
description = "Tokio-based bindings for the HEOS system"
version = "0.1.0"
authors = [
    "Christoph Kappel <christoph@unexist.dev>"
]
license-file = "LICENSE"
readme = "README.md"
homepage = "https://unexist.dev"
repository = "https://github.com/unexist/heos-dial/tree/master/heos-lib"
edition = "2021"
exclude = ["/test_assets", "/slumber.yml", "/Taskfile.yml"]

[dependencies]
anyhow = "1.0.98"
const_format = "0.2.34"
async-stream = "0.3.6"
tokio = { version = "1.45.1", features = ["net", "macros", "rt", "rt-multi-thread", "io-util"] }
futures-util = "0.3.31"
gjson = "0.8.1"

[dev-dependencies]
pretty_assertions = "1.4.1"
rstest = "0.24.0"
