[package]
name = "heos-tui"
version = "0.1.0"
authors = [
    "Christoph Kappel <christoph@unexist.dev>"
]
license-file = "LICENSE"
homepage = "https://unexist.dev"
repository = "https://hg.unexist.dev/heos-dial"
edition = "2021"

[dependencies.heos-lib]
version = "0.1.0"
path = "../heos-lib"

[dependencies]
crossterm = "0.28.1"
ratatui = "0.29.0"
color-eyre = "0.6.3"