[package]
name = "heos-tui"
version = "0.1.0"
authors = [
    "Christoph Kappel <christoph@unexist.dev>"
]
license-file = "LICENSE"
homepage = "https://unexist.dev"
repository = "https://hg.unexist.dev/heos-dial"
edition = "2021"
exclude = ["/Taskfile.yml"]

[dependencies.heos-lib]
version = "0.1.0"
path = "../heos-lib"

[dependencies]
crossterm = { version = "0.29.0", features = ["event-stream"] }
ratatui = "0.29.0"
tokio = { version = "1.47.1", features = ["full"] }
futures = "0.3.31"
futures-util = "0.3.31"
tui-logger = "0.17.3"
log = "0.4.28"
